--- a/aptitude/static/directives/feature-list.html
+++ b/aptitude/static/directives/feature-list.html
@@ -1,6 +1,8 @@
-<div ng-controller="UserCtrl as userCtrl">
-<div ng-repeat="val in data.list">
-	<div class="aptitude" ng-hide="userCtrl.canVote">
+<div >
+
+<div ng-repeat="aux in [data.list, data.actitudes]">
+<div ng-repeat="val in aux">
+	<div class="aptitude" ng-hide="canVote">
 		<div class="progress progress-striped">
 		  <div class="progress-bar progress-bar-{% cycle "success" "info" "warning" "danger" %}" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: {{val.value}}">
 		    <span class="sr-only">80% Complete (success)</span>
@@ -11,7 +13,7 @@
 	</div>
 
 	
-	<div class="aptitude vote" ng-show="userCtrl.canVote">
+	<div class="aptitude vote" ng-show="canVote">
 		
 		<div class="slider" class="ui-slider">
             <div class="ui-slider-segment" data-toggle="tooltip" title="Here is the sample of talltooltip that contains three lines or more. More."></div>
@@ -22,7 +24,10 @@
 		<span class="name">{{val.name}}</span>	
 	</div>
 </div>
-<form ng-show="userCtrl.addSkills" ng-submit="userCtrl.addSkill(userCtrl.skill.name)">
+</div>
+
+<!-- Adding actitudes form -->
+<form ng-show="addSkills" ng-submit="addSkill(skill.name)">
 	<div class="aptitude">
 		<div class="progress progress-striped">
 		  <div class="progress-bar progress-bar-{% cycle "success" "info" "warning" "danger" %}" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 0">
@@ -30,13 +35,13 @@
 		  </div>
 
 		</div>
-		<span class="name">{{userCtrl.skill.name}}</span>
+		<span class="name">{{skill.name}}</span>
 	</div>
 	
-	<input ng-model="userCtrl.skill.name" type="text">
+	<input ng-model="skill.name" type="text">
 	<input type="submit">
 </form>
 
-<p class="small-text clear" ng-click="userCtrl.showSkills()" ng-show="userCtrl.canEdit">+ conocimientos </p>
+<p class="small-text clear" ng-click="showSkills()" ng-show="canEdit">+ conocimientos </p>
 
 <div>
